--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <style>
 
     img {
-        max-width: 100%;
-        max-height: 100%;
+        max-width: auto;
+        max-height: auto;
     }
    
     @media DISABLED {
