--- a/index.html
+++ b/index.html
@@ -7,42 +7,13 @@
   <script src="bootstrap.bundle.min.js" > </script>
   <style>
 
-    img{
-        max-width: 100%;
-        max-height: 100%;
-        display: block; /* remove extra space below image */
+    img {
+      size: auto;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
-
-    html, body
-    {
-        height: 100%;
-        margin:0;
-        padding:0;
-    }
-
-    div {
-        position:relative;
-        height: 100%;
-        width:100%;
-    }
-
-    #main-img {
-        position:absolute;
-        top:0;
-        left:0;
-        right:0;
-        bottom:0;
-        margin:auto;
-    }
-
-    /* body {
-      background-position: center center;
-      background-attachment: fixed;
-      background-repeat: no-repeat; background-size: auto;
-      background-image: url(home_desktop.jpg);
-    } */
-
-
   </style>
   
 </head>
@@ -56,9 +27,5 @@
     </div>
   </div>
 
-   <!-- <div class="container">
-    <img  id="main-img" src="#" />
-   </div>  
- -->
 </body>
 </html>
