--- a/index.html
+++ b/index.html
@@ -6,25 +6,44 @@
   <link href="bootstrap.min.css" rel="stylesheet"/>
   <script src="bootstrap.bundle.min.js" > </script>
   <style>
+  .container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 768px;
+  }
 
-    img {
-      size: auto;
+  /* * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  } */
+
+
+    .centered-element {
+      margin: 0;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
+
+    #main-img {
+      height: auto; 
+      width: auto; 
+    }    
+
   </style>
   
 </head>
 <body>
 
   <div class="container">
-    <div class="row">
+    <div class="centered-element">
       <a href="maps.html">
       <img id="main-img" src="home_desktop.jpg" alt="" />
       </a>
-    </div>
+      </div>  
   </div>
 
 </body>
