--- a/maps.html
+++ b/maps.html
@@ -66,8 +66,9 @@
       .sidebar {padding-top: 15px;}
       .sidebar a {font-size: 18px;}
     }    
+    
    .footer{
-    text-color: red;
+    color: red;
     text-align: right;
     padding: 10px;
 }
