--- a/maps.html
+++ b/maps.html
@@ -89,7 +89,7 @@ let adjList;
 var resultpathList = {};
 var pathcnt = 0;
 
-var tuimage = new Array(17);
+var tuimage = new Array(25);
 
 tuimage[0] = { name:"b1_01.jpg", thumbnail:"b1_01s.jpg", tag:"ตึก, ตึก1"};
 tuimage[1] = { name:"pr_01.jpg", thumbnail:"pr_01s.jpg", tag:"pr, PR, Pr, ประชาสัมพันธ์"};
@@ -108,7 +108,20 @@ tuimage[13] = { name:"hf_03.jpg", thumbnail:"hf_03s.jpg", tag:"ศาลา, ศ
 tuimage[14] = { name:"hf_04.jpg", thumbnail:"hf_04s.jpg", tag:"ศาลา, ศาลาพระเกี้ยวแก้ว, พระเกี้ยว"};
 tuimage[15] = { name:"tl_01.jpg", thumbnail:"tl_01s.jpg", tag:"ห้องน้ำ, ห้องน้ำตึกศิลปะ, ตึกศิลปะ"};
 tuimage[16] = { name:"tl_02.jpg", thumbnail:"tl_02s.jpg", tag:"ห้องน้ำ, ห้องน้ำโรงใหญ่, โรงใหญ่"};
-
+tuimage[17] = {name:"b3_01.jpg", thumbnail:"b3_01s.jpg", tag:"ตึก, ตึก3, 3"};
+tuimage[18] = {name:"b50_01.jpg", thumbnail:"b50_01s.jpg", tag:"ตึก, ตึก50, 50ปี"};
+tuimage[19] = {name:"b55_01.jpg", thumbnail:"b55_01s.jpg", tag:"ตึก, ตึก55, 55ปี"};
+tuimage[20] = {name:"b60_01.jpg", thumbnail:"b60_01s.jpg", tag:"ตึก, ตึก60, 60พรรษา, 60ปี"};
+tuimage[21] = {name:"b72_01.jpg", thumbnail:"b72_01s.jpg", tag:"ตึก, ตึก72, 72ปี"};
+tuimage[22] = {name:"b80_01.jpg", thumbnail:"b80_01s.jpg", tag:"ตึก, ตึก80"};
+tuimage[23] = {name:"b81_01.jpg", thumbnail:"b80_01s.jpg", tag:"ตึก, ตึก81"};
+tuimage[24] = {name:"b8_01.jpg", thumbnail:"b8_01s.jpg", tag:"ตึก, ตึก8"};
+//tuimage[] = {name:".jpg", thumbnail:".jpg", tag:""};
+//tuimage[] = {name:".jpg", thumbnail:".jpg", tag:""};
+//tuimage[] = {name:".jpg", thumbnail:".jpg", tag:""};
+//tuimage[] = {name:".jpg", thumbnail:".jpg", tag:""};
+//tuimage[] = {name:".jpg", thumbnail:".jpg", tag:""};
+  
 // var location = new Array(84);
 
 location[0] = { "name":"ทางเลี้ยวเข้าสนตอ", "tag":"", "x":1191, "y":92}
